# auth-service

./: .gitignore  README.md  pyproject.toml  settings.toml
app/auth/: __init__.py  config.py  exceptions.py  models.py
app/auth/authentication/: exceptions.py  models.py  routes.py  services.py
app/auth/authentication/tokens/: models.py  services.py
app/auth/database/: coders.py  exceptions.py  services.py  types.py
app/auth/users/: models.py  routes.py  services.py
app/auth/users/profiles/: models.py  routes.py  services.py
app/auth/verification/: exceptions.py  models.py  routes.py  services.py
tests/: conftest.py  test_authentication.py  test_health_check.py  test_profiles.py  test_users.py  test_verification.py
tests/users/: test_users.py
