[tool.poetry]
name = "auth"
version = "0.0.1"
authors = ["PauLark inc."]
description = "Another one auth service"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
dynaconf = "^3.2.5"
motor = "^3.4.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pyjwt = "^2.8"
email-validator = "^2.2"
fastapi-mail = "^1.4.1"